[gd_scene load_steps=6 format=3 uid="uid://utpsrx778hsj"]

[ext_resource type="Script" uid="uid://b0latt6toj6ah" path="res://scripts/Enemy Scripts/shoot_enemy.gd" id="1_6luwi"]
[ext_resource type="Texture2D" uid="uid://lk0ms1kw6k4i" path="res://icon.svg" id="2_ognii"]
[ext_resource type="Texture2D" uid="uid://4lao71qtcp1s" path="res://assets/Enemy/enemy_triangle[1].png" id="3_ognii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mb8td"]
size = Vector2(50, 96)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6luwi"]
polygon = PackedVector2Array(-24.9998, -49.0001, 25.0002, -47.9999, 25.9998, 48.0001, -26.0002, 48.9999)

[node name="Shoot Enemy" type="CharacterBody2D" groups=["enemy"]]
rotation = -1.5708
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6luwi")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.390625, 0.75)
texture = ExtResource("2_ognii")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mb8td")

[node name="RayCast" type="RayCast2D" parent="."]
collision_mask = 7

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Visiblity" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visiblity"]
position = Vector2(0, 105)
scale = Vector2(1.70685, 1.70685)
polygon = PackedVector2Array(0, -61.5168, 156.429, 216.188, 117.175, 236.107, 50.3852, 257.785, -21.0915, 262.472, -90.2247, 246.653, -150.57, 222.046)

[node name="Vision" type="PointLight2D" parent="."]
position = Vector2(0, 275)
scale = Vector2(1.45953, 1.41154)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_item_cull_mask = 15
texture = ExtResource("3_ognii")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_6luwi")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Visiblity" to="." method="_on_visiblity_body_entered"]
[connection signal="body_exited" from="Visiblity" to="." method="_on_visiblity_body_exited"]
